--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.learnapp">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -11,7 +11,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".UserListActivity">
+        <activity android:name=".app.userlistdetail.UserListDetailActivity"></activity>
+        <activity android:name=".app.userListDetail.UserListDetailActivity" />
+        <activity android:name=".app.userlist.UserListActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
